src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>2%2E  Call Out</fullName>
        <description>§    Gain permission  §    Generate interest  §    Uncover initial concerns  §    Diagnose position and transition  §    Determine strategy to align buying and selling styles</description>
        <isActive>true</isActive>
        <values>
            <fullName>2%2E Call Out</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Decision_Date__c</fullName>
        <defaultValue>IF(OR(ISPICKVAL(StageName, &quot;7. Implement&quot;), ISPICKVAL(StageName, &quot;0. Downgraded&quot;)), NOW(), NULL)</defaultValue>
        <description>Opportunity closed/won date</description>
        <inlineHelpText>IF(OR(ISPICKVAL(StageName, &quot;7. Implement&quot;), ISPICKVAL(StageName, &quot;0. Downgraded&quot;)), NOW(), NULL)</inlineHelpText>
        <label>Actual Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Input_Method__c</fullName>
        <label>Lead Input Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cisco Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco WebEx Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Trial Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Inquiry - Phone/Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Merge Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Merge Responder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Program Responder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oneview-Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneView Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Calling - External Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Calling - Internal Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner NFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPU Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Demo Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow Responder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebEx AIM Trial Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebSeminar Import</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Project</label>
        <referenceTo>Marketing_Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cxLast_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>